Estilo da Landing Page e Mudança na descrição para a página do labirinto

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="container">
       <h1>Labirinto - Jogar no Navegador</h1>
+      <p>Visualize e compare BFS e DFS enquanto joga em um labirinto gerado proceduralmente.</p>
       <div class="controls">
         <button id="newBtn">Novo Labirinto</button>
         <button id="bfsBtn">Resolver (BFS)</button>
