Adicionando botão giratório

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="/static/landing.css">
   </head>
   <body>
+
     <div class="container">
       <div class="landing-card">
-        <p>
-          <a class="primary-btn" href="/labirinto"><img src="/static/media/logo.png" alt="Logo RunLab" class="logo-img"></a>
-        </p>
+        <div class="card-face card-front">
+          <img src="/static/media/logo.png" alt="Logo RunLab" class="logo-img">
+        </div>
+
+        <div class="card-face card-back">
+          <p>
+            <a class="primary-btn" href="/labirinto">JOGAR</a>
+          </p>
+        </div>
       </div>
     </div>
   </body>
