--- a/static/landing.css
+++ b/static/landing.css
@@ -14,52 +14,79 @@ body, html {
     justify-content: center;
     align-items: center;
     text-align: center;
+    perspective: 1000px;
 }
 
 .landing-card {
-    width: 380px;
-    height: 380px;
+    width: 500px;
+    height: 500px;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+    border-radius: 50%;
+}
+
+.landing-card:hover {
+    transform: rotateY(180deg);
+}
+
+.card-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
     border-radius: 50%;
     backdrop-filter: blur(5px);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding: 30px;
+    align: center;
     box-sizing: border-box;
+    background-color: #c73232;
 }
 
-.landing-card h1 {
-    font-family: 'Arial Black', sans-serif;
-    font-size: 4.5em;
+.card-front {
+}
 
+.card-front .logo-img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+
+.card-back {
+    transform: rotateY(180deg);
+     box-shadow:
+    inset 0 0 25px rgba(0, 0, 0, 0.2),
+    inset 0 0 10px rgba(255, 255, 255, 0.01);
+}
+
+.card-back h2 {
+    font-family: 'Arial Black', sans-serif;
+    font-size: 3.5em;
     margin: 0;
     line-height: 1;
 }
 
-.landing-card p {
+.card-back p {
     font-size: 1.1em;
     color: #333;
-    margin: 20px 0;
+    margin: 15px 0;
 }
 
-.landing-card p.small {
-    font-size: 0.8em;
-    color: #555;
-    margin-top: 15px;
-    font-style: italic;
-}
-
-.landing-card .primary-btn {
-    display: inline-block;
+.card-back .primary-btn {
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: bolder;
     border: none;
-    font-size: 1.1em;
+    border-radius: 50%;
+    font-size: 3em;
     cursor: pointer;
     transition: all 0.3s ease;
-}
-
-.landing-card .primary-btn:hover {
-    transform: scale(1.05);
+    width: 500px;
+    height: 500px;
+    color: #ffffff;
+    justify-content: center;
+    align-items: center;  
 }
