--- a/static/landing.css
+++ b/static/landing.css
@@ -9,7 +9,7 @@ body, html {
 .container {
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(135deg, #FF6F6F 0%, #EA4335 100%);
+    background: linear-gradient(135deg, #ca5f5f 0%, #5f0d06 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,7 +41,7 @@ body, html {
     flex-direction: column;
     justify-content: center;
     box-sizing: border-box;
-    background-color: #c73232;
+    background-color: #000000;
 }
 
 .card-front .logo-img {
@@ -55,6 +55,7 @@ body, html {
      box-shadow:
     inset 0 0 25px rgba(0, 0, 0, 0.2),
     inset 0 0 10px rgba(255, 255, 255, 0.01);
+    background-color: #781515;
 }
 
 .card-back h2 {
